@@ -17,3 +17,4 @@ v1.0
 -Remove email validation over email field (implicit it is @metacube.com)
 -Search the mongodb and send the appropriate data to client.
 -Add Search page and sample table
+-Changed server to send the complete record if email/substring matches a single record.
